<resources>
    <string name="app_name">StoryAppSubmission</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to share your knowledge about Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Do it on Story.co!</string>
    <string name="title_welcome_page">Welcome to Story.co!</string>
    <string name="title_signup_page">Please fill in your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data first</string>
    <string name="title_login_page">Are you ready to share your story?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Learning at Story.co</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="posted_date_placeholder">Posted at [%s]</string>
    <string name="upload_gambar">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="deskripsi">Describe your story</string>
    <string name="no_data">No data available</string>
    <string name="add_story">adding story</string>
    <string name="preview_gambar">preview uploaded image</string>
    <string name="detail_story_photo">detail story photo</string>
    <string name="error">Error occurred</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nulla sit amet aliquam lacinia, nisl nisl aliquam nisl, nec aliquam nisl nisl sit amet nisl. Sed euismod, nulla sit amet aliquam lacinia, nisl nisl aliquam nisl, nec aliquam nisl nisl sit amet nisl.</string>
    <string name="bahasa">Language</string>
    <string name="addStory">Add Story</string>
    <string name="login_failed">Login Failed</string>
    <string name="story_co">Story.co</string>
    <string name="signup_success">Signup Success</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="login_success">Login Success</string>
    <string name="welcome">Welcome, %1$s!</string>
    <string name="photo_profile">photo profile</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="error_message">Failed to load stories. Please try again.</string>
    <string name="retry">Retry</string>
    <string name="enable_loc_title">Enable Location</string>
    <string name="enable_loc_message">Your location setting is set to \'Off\'. Please enable location to use this feature.</string>
    <string name="enable_loc">Enable Location</string>
    <string name="cancel_loc">Cancel</string>
    <string name="switch_location">Use current location</string>
    <string name="gambar_login_page">gambar_login_page</string>
</resources>